port old syntax to new syntax

--- a/schema/codegen-schema/auth/password.canonical.yaml
+++ b/schema/codegen-schema/auth/password.canonical.yaml
@@ -1,6 +1,6 @@
 kinds:
     -   password-requirement-body: &password-requirement-body
-            -   type: https://www.boundedinfinity.com/canonical/id
+            -   kind: canonical://www.boundedinfinity.com/canonical/id
             -   type: string
                 name: name
                 description: Descriptive name for the password requirements
@@ -40,7 +40,7 @@ kinds:
         description: Password requirements
         type: object
         properties:
-            -   type: https://www.boundedinfinity.com/canonical/id
+            -   kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
             
     -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-retrieve-request
@@ -48,7 +48,7 @@ kinds:
         type: object
         properties:
             -   name: tracking-id
-                type: https://www.boundedinfinity.com/canonical/id
+                kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
 
     -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-create-request
@@ -56,7 +56,7 @@ kinds:
         type: object
         properties:
             -   name: tracking-id
-                type: https://www.boundedinfinity.com/canonical/id
+                kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
     
     -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-delete-request
@@ -64,7 +64,7 @@ kinds:
         type: object
         properties:
             -   name: tracking-id
-                type: https://www.boundedinfinity.com/canonical/id
+                kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
     
     -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-update-request
@@ -72,8 +72,8 @@ kinds:
         type: object
         properties:
             -   name: tracking-id
-                type: https://www.boundedinfinity.com/canonical/id
-            -   type: https://www.boundedinfinity.com/canonical/id
+                kind: canonical://www.boundedinfinity.com/canonical/id
+            -   kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
 
 operations:
@@ -91,12 +91,12 @@ kinds:
         description: Username and password credentials information
         type: object
         properties:
-            -   type: https://www.boundedinfinity.com/canonical/id
+            -   kind: canonical://www.boundedinfinity.com/canonical/id
             -   name: name
                 description: A descriptive name for this username / password pair.
                 type: string
                 max: 25
-            -   type: https://www.boundedinfinity.com/canonical/util/description
+            -   kind: canonical://www.boundedinfinity.com/canonical/util/description
             -   name: username
                 description: The username
                 type: string
@@ -138,6 +138,6 @@ operations:
     -   id: https://www.boundedinfinity.com/canonical/auth/username-password-create
         name: create
         inputs: 
-            - type: https://www.boundedinfinity.com/type/auth/username-password-create-request
+            - kind: canonical://www.boundedinfinity.com/type/auth/username-password-create-request
         outputs: 
-            - type: https://www.boundedinfinity.com/type/auth/username-password-create-response
+            - kind: canonical://www.boundedinfinity.com/type/auth/username-password-create-response
