--- a/schema/codegen-schema/auth/ssh-key-pair.canonical.yaml
+++ b/schema/codegen-schema/auth/ssh-key-pair.canonical.yaml
@@ -30,35 +30,35 @@ kinds:
                 type: string
 
 data:
-    -   type: https://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
+    -   kind: canonical://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
         id: rsa
         name: RSA
         description: >
             The Rivest-Shamir-Adleman algorithm
-    -   type: https://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
+    -   kind: canonical://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
         id: dsa
         name: DSA
         description: >
             The Digtial Signature Algorithm
-    -   type: https://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
+    -   kind: canonical://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
         id: ed25519
         name: Edwards-curve Digital Signature Algorithm
         description: >
             The Edwards-curve Digital Signature Algorithm signature scheme using SHA-512 and Curve25519.
-    -   type: https://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
+    -   kind: canonical://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
         id: ed25519-sk
         name: Edwards-curve Digital Signature Algorithm with FIDO/U2F 
         description: >
             The Edwards-curve Digital Signature Algorithm signature scheme using SHA-512 and 
             Curve25519 for use with a Fast Identity Online (FIDO) / Universal Second Factor (U2F) 
             authentication hardware devices.
-    -   type: https://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
+    -   kind: canonical://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
         id: ecdsa
         name: Elliptic Curve Digital Signature Algorithm
         description: >
             The Elliptic Curve Digital Signature Algorithm (ECDSA) offers a variant of the Digital 
             Signature Algorithm (DSA) which uses elliptic-curve cryptography.
-    -   type: https://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
+    -   kind: canonical://www.boundedinfinity.com/canonical/auth/ssh-key-algorithm
         id: ecdsa-sk
         name: Elliptic Curve Digital Signature Algorithm with FIO/U2F
         description: >
