convert id format from URL to URN

--- a/schema/codegen-schema/auth/password.canonical.yaml
+++ b/schema/codegen-schema/auth/password.canonical.yaml
@@ -36,14 +36,14 @@ kinds:
     # ==========================================================================================
     #  Password Requirements
     # ==========================================================================================
-    -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-model
+    -   id: canonical:auth/password-requirement-model
         description: Password requirements
         type: object
         properties:
             -   kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
             
-    -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-retrieve-request
+    -   id: canonical:auth/password-requirement-retrieve-request
         description: Password requirements
         type: object
         properties:
@@ -51,7 +51,7 @@ kinds:
                 kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
 
-    -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-create-request
+    -   id: canonical:auth/password-requirement-create-request
         description: Password requirements
         type: object
         properties:
@@ -59,7 +59,7 @@ kinds:
                 kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
     
-    -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-delete-request
+    -   id: canonical:auth/password-requirement-delete-request
         description: Password requirements
         type: object
         properties:
@@ -67,7 +67,7 @@ kinds:
                 kind: canonical://www.boundedinfinity.com/canonical/id
             -   <<: *password-requirement-body
     
-    -   id: https://www.boundedinfinity.com/canonical/auth/password-requirement-update-request
+    -   id: canonical:auth/password-requirement-update-request
         description: Password requirements
         type: object
         properties:
@@ -77,7 +77,7 @@ kinds:
             -   <<: *password-requirement-body
 
 operations:
-    -   id: https://www.boundedinfinity.com/canonical/auth/username-password-create
+    -   id: canonical:auth/username-password-create
         name: create
         input: 
             ref: https://www.boundedinfinity.com/type/auth/username-password-create-request
@@ -87,7 +87,7 @@ operations:
 ---
 
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/auth/username-password-model
+    -   id: canonical:auth/username-password-model
         description: Username and password credentials information
         type: object
         properties:
@@ -135,7 +135,7 @@ kinds:
                 items: 
                     type: string
 operations:
-    -   id: https://www.boundedinfinity.com/canonical/auth/username-password-create
+    -   id: canonical:auth/username-password-create
         name: create
         inputs: 
             - kind: canonical://www.boundedinfinity.com/type/auth/username-password-create-request
