--- a/schema/codegen-schema/auth/security-question.canonical.yaml
+++ b/schema/codegen-schema/auth/security-question.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/auth/security-question
+    -   id: canonical:auth/security-question
         description: Account security questions
         type: object
         properties:
