--- a/schema/codegen-schema/id/uuid.canonical.yaml
+++ b/schema/codegen-schema/id/uuid.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/util/uuidv4
+    -   id: canonical:util/uuidv4
         name: UUID v4
         type: string
         min: 36
