--- a/schema/codegen-schema/label/label.canonical.yaml
+++ b/schema/codegen-schema/label/label.canonical.yaml
@@ -1,6 +1,6 @@
 
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/label/label-model
+    -   id: canonical:label/label-model
         type: object
         description: The canonical view model for a Label
         properties:
