--- a/schema/codegen-schema/people/person.canonical.yaml
+++ b/schema/codegen-schema/people/person.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/people/person
+    -   id: canonical:people/person
         type: object
         properties:
             -   name: id
@@ -13,7 +13,7 @@ kinds:
                 items:
                     type: ref
                     ref: https://www.boundedinfinity.com/canonical/people/name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym
+    -   id: canonical:people/pseudonym
         type: object
         properties:
             -   type: ref
@@ -28,33 +28,33 @@ kinds:
                 ref: https://www.boundedinfinity.com/canonical/util/description
 
 data:
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym
+    -   id: canonical:people/pseudonym
         name: Nickname
         description: A person's nick name.
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym
+    -   id: canonical:people/pseudonym
         name: Alias
         description: A person alias
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym
+    -   id: canonical:people/pseudonym
         name: Stage name
         description: A person's stage name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/ring-name
+    -   id: canonical:people/pseudonym-type/ring-name
         name: Ring name
         description: A person's ring name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/pen-name
+    -   id: canonical:people/pseudonym-type/pen-name
         name: Pen name
         description: A person's pen name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/nom-de-plume
+    -   id: canonical:people/pseudonym-type/nom-de-plume
         name: Nom de plume
         ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/pen-name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnal-name
+    -   id: canonical:people/pseudonym-type/regnal-name
         name: Regnal name
         description: A person's regnal name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnant-name
+    -   id: canonical:people/pseudonym-type/regnant-name
         name: Regnant name
         ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/regnal-name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/reign-name
+    -   id: canonical:people/pseudonym-type/reign-name
         name: Reign name
         ref: https://www.boundedinfinity.com/canonical/people/pseudonym-type/reign-name
-    -   id: https://www.boundedinfinity.com/canonical/people/pseudonym-type/online-name
+    -   id: canonical:people/pseudonym-type/online-name
         name: Online name
         description: A person's online name
