--- a/schema/codegen-schema/util/description.canonical.yaml
+++ b/schema/codegen-schema/util/description.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/util/description
+    -   id: canonical:util/description
         type: string
         name: description
         min: 5
