--- a/schema/codegen-schema/util/email.canonical.yaml
+++ b/schema/codegen-schema/util/email.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/util/email
+    -   id: canonical:util/email
         type: string
         max: 200
         
