--- a/schema/codegen-schema/util/reference.canonical.yaml
+++ b/schema/codegen-schema/util/reference.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/util/reference
+    -   id: canonical:util/reference
         type: object
         properties:
             -   kind: canonical://www.boundedinfinity.com/canonical/util/name-20
