--- a/schema/codegen-schema/cms/file-descriptor.canonical.yaml
+++ b/schema/codegen-schema/cms/file-descriptor.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/cms/file-descriptor
+    -   id: canonical:cms/file-descriptor
         name: file-descriptor
         properties:
             -   name: name
