--- a/schema/codegen-schema/cms/mime-type.canonical.yaml
+++ b/schema/codegen-schema/cms/mime-type.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/cms/mime-type
+    -   id: canonical:cms/mime-type
         name: mime-type
         type: object
         properties:
