--- a/schema/codegen-schema/prescriptions/prescriptions.canonical.yaml
+++ b/schema/codegen-schema/prescriptions/prescriptions.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/prescriptions/prescription
+    -   id: canonical:prescriptions/prescription
         name: id
         type: object
         description: Drug prescription
