--- a/schema/codegen-schema/util/abbreviation.canonical.yaml
+++ b/schema/codegen-schema/util/abbreviation.canonical.yaml
@@ -1,5 +1,5 @@
 kinds:
-    -   id: https://www.boundedinfinity.com/canonical/util/abbreviation
+    -   id: canonical:util/abbreviation
         name: abbreviation
         type: object
         properties:
